metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>agf__Actual_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When the approval is delegated through the approval process, this field is updated by the ADM_Signoff.trigger with the actual approver.</description>
    <label>Actual Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signoffs1</relationshipName>
    <type>Lookup</type>
</CustomField>