metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Approval_Comments_Available__c.field-meta.xml
<CustomField>
    <fullName>agf__Approval_Comments_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by Approval Process when record has been approved or rejected. Used by Signoff&apos;s trigger to update the Signoff_Comments__c field.</description>
    <label>Approval Comments Available</label>
    <type>Checkbox</type>
</CustomField>