metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Approver__c.field-meta.xml
<CustomField>
    <fullName>agf__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signoffs</relationshipName>
    <type>Lookup</type>
</CustomField>