metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__checked__c.field-meta.xml
<CustomField>
    <fullName>agf__checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checked</label>
    <type>Checkbox</type>
</CustomField>