metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__eRelease_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__eRelease_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>eRelease Request this Signoff record is approving</description>
    <inlineHelpText>eRelease Request this Signoff record is approving. Cannot specify both Release and eRelease Request.</inlineHelpText>
    <label>eRelease Request</label>
    <referenceTo>agf__eRelease_Request__c</referenceTo>
    <relationshipLabel>Signoffs</relationshipLabel>
    <relationshipName>Signoffs</relationshipName>
    <type>Lookup</type>
</CustomField>