metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Exception_Cost__c.field-meta.xml
<CustomField>
    <fullName>agf__Exception_Cost__c</fullName>
    <description>Describe the cost of granting the exception.</description>
    <inlineHelpText>Describe the cost of granting the exception in terms of customer impact, staff impact or additional risk which may be introduced as a result.</inlineHelpText>
    <label>Exception Cost</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>