metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Exception_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__Exception_Request__c</fullName>
    <description>Describe the exception for which this approval is being requested.</description>
    <inlineHelpText>Describe the exception for which this approval is being requested. Explain how it deviates from standard procedures.</inlineHelpText>
    <label>Exception Request</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>