metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__is_Locked__c.field-meta.xml
<CustomField>
    <fullName>agf__is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the Signoff record is submitted for approval by a Field Update. Then reset when the request has been approved or rejected (also by an approval process Field Update).</description>
    <label>is Locked</label>
    <type>Checkbox</type>
</CustomField>