metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Release</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Signoffs</relationshipLabel>
    <relationshipName>Signoffs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>