metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Release_Approver__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Application Approver related to this signoff record.</description>
    <inlineHelpText>Enter this Signoff record&apos;s Application Approver.</inlineHelpText>
    <label>Release Approver</label>
    <referenceTo>agf__ADM_Application_Approver__c</referenceTo>
    <relationshipLabel>Signoffs</relationshipLabel>
    <relationshipName>Signoffs</relationshipName>
    <type>Lookup</type>
</CustomField>