metadata/force-app/main/default/objects/agf__ADM_Signoff__c/fields/agf__Signoff_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Signoff_Comments__c</fullName>
    <label>Signoff Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>